--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
